--- a/custom_components/heathrow_arrivals_rwy/manifest.json
+++ b/custom_components/heathrow_arrivals_rwy/manifest.json
@@ -1,10 +1,12 @@
 {
     "domain": "heathrow_arrivals",
     "name": "Heathrow Arrivals Runway",
-    "codeowners": [],
+    "codeowners": ["@anthonyjhicks"],
+    "config_flow": false,    
     "dependencies": [],
     "documentation": "https://github.com/anthonyjhicks/heathrow-arrivals-rwy",
     "iot_class": "local_polling",
+    "issues": "https://github.com/anthonyjhicks/heathrow-arrivals-rwy/issues",    
     "requirements": ["beautifulsoup4==4.9.3"],
-    "version": "0.1.0"
+    "version": "1.0"
 }
