--- a/custom_components/heathrow_arrival_rwy/manifest.json
+++ b/custom_components/heathrow_arrival_rwy/manifest.json
@@ -1,11 +1,11 @@
 {
-    "domain": "heathrow_arrivals",
-    "name": "Heathrow Arrivals Runway",
+    "domain": "heathrow_arrival_rwy",
+    "name": "Heathrow Arrival Runway",
     "codeowners": ["@anthonyjhicks"],
     "config_flow": false,    
     "dependencies": [],
     "documentation": "https://github.com/anthonyjhicks/heathrow-arrivals-rwy",
-    "iot_class": "cloud_polling",    
+    "iot_class": "local_polling",
     "issues": "https://github.com/anthonyjhicks/heathrow-arrivals-rwy/issues",    
     "requirements": ["beautifulsoup4==4.9.3"],
     "version": "1.0"
