Changed to Heathrow Arrivals

--- a/custom_components/heathrow_arrivals/manifest.json
+++ b/custom_components/heathrow_arrivals/manifest.json
@@ -1,5 +1,5 @@
 {
-    "domain": "heathrow_arrival_rwy",
+    "domain": "heathrow_arrivals",
     "name": "Heathrow Arrival Runway",
     "codeowners": ["@anthonyjhicks"],
     "config_flow": false,
